--- a/html/form.html
+++ b/html/form.html
@@ -16,13 +16,23 @@
         padding: 20px;
         margin: 20px;
         background-color: #f3f3f3;
+        display: flex;
+        justify-content: center;
+      }
+      .card{
+        width: 60%;
+        padding: 20px;
+        background-color: #ffff;
+        border-radius: 8px;
       }
     </style>
   </head>
   <body>
     <!-- control + / untuk komentar -->
     <div class="container">
-
+        <div class="card">
+            <form action="" method="post"></form>
+        </div>
     </div>
 
     <div class="container">
