--- a/html/table.html
+++ b/html/table.html
@@ -95,7 +95,17 @@
             <td>Rizki</td>
             <td>123321</td>
             <td>Teknik Informatika</td>
-            <td>+62 123 456 789</td>
+            <td rowspan="3" style="background-color: aquamarine;">Nomor tidak aktif</td>
+          </tr>
+          <tr>
+            <td>Rizal</td>
+            <td>123321</td>
+            <td>Teknik Informatika</td>
+          </tr>
+          <tr>
+            <td>Putra</td>
+            <td>123321</td>
+            <td>Teknik Informatika</td>
           </tr>
         </tbody>
       </table>
