--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
         padding: 10px;
         margin: 20px;
       }
-      .card{
+      .card {
         width: 200px;
         padding: 20px;
         margin: 20px;
@@ -72,45 +72,70 @@
 
     <!-- tag untuk image. -->
     <div class="container">
-        <!-- direct link published -->
-        <img src="https://static.remove.bg/sample-gallery/graphics/bird-thumbnail.jpg" width="200" alt="Gambar contoh dari link">
-        <!-- from storage -->
-        <img src="images/contoh.png" width="200" alt="Gambar contoh dari link">
+      <!-- direct link published -->
+      <img
+        src="https://static.remove.bg/sample-gallery/graphics/bird-thumbnail.jpg"
+        width="200"
+        alt="Gambar contoh dari link"
+      />
+      <!-- from storage -->
+      <img src="images/contoh.png" width="200" alt="Gambar contoh dari link" />
     </div>
 
     <!-- list -->
-     <div class="container">
-        <!-- unordered list -->
-         <p>Daftar mobil punya saya :</p>
-         <ul style="margin: 20px;">
-            <li>MClaren</li>
-            <li>lambo</li>
-            <li>avanza</li>
-         </ul>
+    <div class="container">
+      <!-- unordered list -->
+      <p>Daftar mobil punya saya :</p>
+      <ul style="margin: 20px">
+        <li>MClaren</li>
+        <li>lambo</li>
+        <li>avanza</li>
+      </ul>
 
-         <!-- ordered list -->
-        <p>Daftar motor punya saya : </p>
-        <ol type="i" start="10" style="margin: 20px;">
-            <li>Ninja</li>
-            <li>NSR</li>
-            <li>v-xion</li>
-        </ol>
+      <!-- ordered list -->
+      <p>Daftar motor punya saya :</p>
+      <ol type="i" start="10" style="margin: 20px">
+        <li>Ninja</li>
+        <li>NSR</li>
+        <li>v-xion</li>
+      </ol>
+    </div>
 
-     </div>
+    <!-- area (div vs span) -->
+    <div class="container bg-white" id="namaId">
+      <div class="card">
+        <h4>Kartu 1</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          perspiciatis corrupti odio natus similique ullam praesentium velit,
+          quam, distinctio minima molestiae iure amet voluptatibus!
+          Necessitatibus sequi fugit quis laboriosam veniam.
+        </p>
+      </div>
+      <div class="card">
+        <p>Kartu 1</p>
+        <p>
+          Lorem ipsum dolor sit,
+          <span style="background-color: #0088cc">Lorem, ipsum.</span> amet
+          consectetur adipisicing elit. Dolorum, fuga!
+        </p>
+      </div>
+    </div>
 
-     <!-- area (div vs span) -->
-     <div class="container bg-white" id="namaId">
-        <div class="card">
-            <h4>Kartu 1</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perspiciatis corrupti odio natus similique ullam praesentium velit, quam, distinctio minima molestiae iure amet voluptatibus! Necessitatibus sequi fugit quis laboriosam veniam.</p>
-        </div>
-         <div class="card">
-            <p>Kartu 1</p>
-            <p>Lorem ipsum dolor sit, <span style="background-color: #0088cc;">Lorem, ipsum.</span> amet consectetur adipisicing elit. Dolorum, fuga!</p>
-        </div>
-     </div>
+    <!-- multimedia -->
+    <div class="container">
+      Audio Music
+      <audio
+        controls
+        src="http://www.sousound.com/music/healing/healing_01.mp3"
+      ></audio>
 
+      <video
+        controls autoplay
+        src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"
+      ></video>
 
-
+    
+    </div>
   </body>
 </html>
