--- a/html/form.html
+++ b/html/form.html
@@ -5,22 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <!-- external css -->
+     <link rel="stylesheet" href="css/style.css">
+
+    <!-- internal -->
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            width: 80dvw;
-            border: 1px solid #333;
-            padding: 20px;
-            margin: 20px;
-            background-color: #f3f3f3;
-            display: flex;
-            justify-content: center;
-        }
-
+    
         .card {
             width: 40%;
             padding: 20px;
