--- a/html/index.html
+++ b/html/index.html
@@ -6,21 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Belajar 1 HTML</title>
 
+  <!-- external css -->
+   <link rel="stylesheet" href="css/style.css">
+
   <!-- internal css -->
 
   <style>
-    * {
-      padding: 0;
-      margin: 0;
-    }
-
-    .container {
-      width: 80dvw;
-      border: 1px solid #333;
-      padding: 10px;
-      margin: 20px;
-    }
-
+  
     .card {
       width: 200px;
       padding: 20px;
