--- a/css/index.html
+++ b/css/index.html
@@ -8,7 +8,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Imperial+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-     
+
       * {
         padding: 0;
         margin: 0;
@@ -30,22 +30,46 @@
         background-color: aqua;
         border-radius: 8px;
         font-weight: 400;
+        text-align: justify;
       }
-      .title{
+      .title {
         font-family: "Imperial Script", cursive;
         font-size: 1.7rem;
         font-weight: 900;
       }
+      .card{
+        width: 20%;
+        border: #3333 solid 0.5px;
+        padding: 10px;
+        margin: 10px 30px;
+        border-radius: 8px;
+        border-style: dashed;
+      }
     </style>
   </head>
   <body>
+    <!-- box-model -->
+    <div class="container">
+      <div class="card">
+        <div class="card-title">Box Model</div>
+        <div class="card-body">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi qui ipsam atque, explicabo ea illo error non ipsum eaque porro.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-title">Lorem, ipsum dolor.</div>
+        <div class="card-body">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi qui ipsam atque, explicabo ea illo error non ipsum eaque porro.</p>
+        </div>
+      </div>
+    </div>
+
     <!-- width dan height -->
     <div class="container">
       <div class="card-1">
-        <p class="title">ini adalah card 1</p>
+        <p class="title">Basic Selector</p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi autem
-          voluptates vitae eum quia esse libero voluptatum repellat architecto
           culpa.
         </p>
       </div>
