--- a/css/index.html
+++ b/css/index.html
@@ -45,56 +45,114 @@
         border-radius: 8px;
         border-style: dashed;
       }
-      .d-block{
+      .d-block {
         width: 50%;
         background-color: aliceblue;
         display: block;
         padding: 10px;
         margin: 10px;
       }
-      .d-inline{
+      .d-inline {
         display: inline;
         background-color: #0088cc70;
         padding: 10px;
         margin: 10px;
+      }
+      .d-inline-block {
+        display: inline-block;
+        width: 30%;
+        padding: 10px;
+        background-color: aquamarine;
+      }
+      .d-none {
+        width: 50%;
+        background-color: aliceblue;
+        padding: 10px;
+        margin: 10px;
+        display: none;
+      }
+      .v-hide {
+        width: 50%;
+        background-color: aliceblue;
+        padding: 10px;
+        margin: 10px;
+        visibility: hidden;
       }
     </style>
   </head>
   <body>
     <!-- css Layouting -->
     <!-- display  -->
-     <!-- display block -->
+    <!-- display block -->
     <div class="container">
-        <div class="card">
-            <span class="d-block">Ini adalah elemen display block</span>
-            <span class="d-block">Display block akan menguasai 1 baris penuh di setiap elemennya.</span>
-            <div class="d-block"> 
-                <p>Display block</p>
-                <ol style="margin: 20px;">
-                    <li>ukuran bisa dicustom</li>
-                    <li>menguasai 1 baris</li>
-                    <li>berlaku padding dan margin</li>
-                </ol>
-            </div>
+      <div class="card">
+        <span class="d-block">Ini adalah elemen display block</span>
+        <span class="d-block"
+          >Display block akan menguasai 1 baris penuh di setiap elemennya.</span
+        >
+        <div class="d-block">
+          <p>Display block</p>
+          <ol style="margin: 20px">
+            <li>ukuran bisa dicustom</li>
+            <li>menguasai 1 baris</li>
+            <li>berlaku padding dan margin</li>
+          </ol>
         </div>
+      </div>
     </div>
 
     <!-- display inline -->
-     <div class="container">
-        <div class="card">
-            <span class="d-inline">Ini adalah display inline</span>
-            <span class="d-inline">Inline akan mengambil 1 baris dan ukurannya sesuai konten</span>
+    <div class="container">
+      <div class="card">
+        <span class="d-inline">Ini adalah display inline</span>
+        <span class="d-inline"
+          >Inline akan mengambil 1 baris dan ukurannya sesuai konten</span
+        >
+      </div>
+      <div class="card">
+        <div class="d-block">
+          <span>Display Inline</span>
+          <ol style="margin: 20px">
+            <li>
+              ukuran tidak bisa diatur, akan mengikuti ukuran dari kontennya
+            </li>
+            <li>padding berlaku, margin hanya sumbu-X (kiri dan kanan)</li>
+          </ol>
         </div>
-        <div class="card">
-            <div class="d-block">
-                <span>Display Inline</span>
-                <ol style="margin: 20px;"">
-                    <li>ukuran tidak bisa diatur, akan mengikuti ukuran dari kontennya</li>
-                    <li>padding berlaku, margin hanya sumbu-X (kiri dan kanan)</li>
-                </ol>
-            </div>
+      </div>
+    </div>
+
+    <!-- display inline-block -->
+    <div class="container">
+      <div class="card">
+        <span class="d-inline-block">Ini adalah inline block</span>
+        <span class="d-inline-block">Menguasai 1 baris</span>
+      </div>
+      <div class="card">
+        <div class="d-inline-block">
+          <p>Display Inline :</p>
+          <ol style="margin: 20px">
+            <li>menguasai 1 baris seperti inline</li>
+            <li>bisa ubah width dan height</li>
+            <li>padding dan margin berlaku</li>
+          </ol>
         </div>
-     </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="card">
+        <span class="d-block">Item 1</span>
+        <span class="d-block">Item 3</span>
+        <span class="d-none">Item None</span>
+        <span class="d-block">Item 3</span>
+      </div>
+      <div class="card">
+        <span class="d-block">Item 1</span>
+        <span class="d-block">Item 3</span>
+        <span class="v-hide">Item Hide</span>
+        <span class="d-block">Item 3</span>
+      </div>
+    </div>
 
     <!-- box-model -->
     <div class="container">
