--- a/css/position.html
+++ b/css/position.html
@@ -37,6 +37,29 @@
         left: 30px; /*jarak ke kiri*/
         top: 60px;
       }
+      .card-box{
+        width: 25%;
+        background-color: aliceblue;
+        border: #4444 solid 0.5px;
+        padding: 20px;
+        position: relative;
+      }
+      .alert-absolute{
+        background-color: #ff000060;
+        position: absolute;
+        top: 10px;
+        right : 10px;
+      }
+
+      .area-fixed{
+        width: 100px;
+        height: 100px;
+        border-radius: 100%;
+        background-color: #00ff1e;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
       
     </style>
   </head>
@@ -55,6 +78,21 @@
         <div class="card">
             Ini adalah card
         </div>
+    </div>
+
+    <div class="container">
+        <h1>Position Absolute</h1>
+        <div class="card-box">
+            <h5>Ini adalah Card</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cum?</p>
+            <span class="alert-absolute">
+                ini absoulute
+            </span>
+        </div>
+    </div>
+
+    <div class="area-fixed">
+        <p>Gabisa discroll</p>
     </div>
 
 
