--- a/css/position.html
+++ b/css/position.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Position</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css"
+      integrity="sha512-mXqwRsOznG7CS37KA7CLR1Fc72gfOgp7r8xaVdBKoBKhitcKI/mK+IamtZUf+FAkufXOvVTESu9lPsoQc+kFxg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/fontawesome.min.css"
+      integrity="sha512-J2Gce+WmOttffHOrVKLTlzxIalPXUMDbSfn5ADqp8Vj9EngnjNHr+jjiL3ZB8muEzo+K51gU10X+0eGqGNL7QA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@@ -15,20 +36,20 @@
         font-family: "Poppins", sans-serif;
       }
 
-      .container{
+      .container {
         width: 80dvw;
         padding: 20px;
         margin: 20px;
         border: 0.5px #4444 solid;
       }
 
-      .card{
+      .card {
         width: 200px;
         height: 100px;
         background-color: aliceblue;
         border: 0.5px #78561744 solid;
       }
-      .card-relative{
+      .card-relative {
         width: 200px;
         height: 100px;
         background-color: rgb(179, 162, 67);
@@ -37,21 +58,21 @@
         left: 30px; /*jarak ke kiri*/
         top: 60px;
       }
-      .card-box{
+      .card-box {
         width: 25%;
         background-color: aliceblue;
         border: #4444 solid 0.5px;
         padding: 20px;
         position: relative;
       }
-      .alert-absolute{
+      .alert-absolute {
         background-color: #ff000060;
         position: absolute;
         top: 10px;
-        right : 10px;
+        right: 10px;
       }
 
-      .area-fixed{
+      .area-fixed {
         width: 100px;
         height: 100px;
         border-radius: 100%;
@@ -59,43 +80,67 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
       }
-      
+
+      .text-white {
+        color: #ffff;
+      }
     </style>
   </head>
   <body>
     <div class="container">
-        <h1>CSS Layout Position</h1>
-        <p>Jenis jenis position pada css</p>
-        <p>Ini termasuk display static (bawaan) </p>
+      <h1>CSS Layout Position</h1>
+      <p>Jenis jenis position pada css</p>
+      <p>Ini termasuk display static (bawaan)</p>
     </div>
 
     <div class="container">
-        <h1>Position Relative</h1>
-        <div class="card-relative">
-            Ini adalah card relative
-        </div>
-        <div class="card">
-            Ini adalah card
-        </div>
+      <h1>Position Relative</h1>
+      <div class="card-relative">Ini adalah card relative</div>
+      <div class="card">Ini adalah card</div>
     </div>
 
     <div class="container">
-        <h1>Position Absolute</h1>
-        <div class="card-box">
-            <h5>Ini adalah Card</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, cum?</p>
-            <span class="alert-absolute">
-                ini absoulute
-            </span>
-        </div>
+      <h1>Position Absolute</h1>
+      <div class="card-box">
+        <h5>Ini adalah Card</h5>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+          cum?
+        </p>
+        <span class="alert-absolute"> ini absoulute </span>
+      </div>
+    </div>
+    <div class="container">
+      <h1>Position Absolute</h1>
+      <div class="card-box">
+        <h5>Ini adalah Card</h5>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+          cum?
+        </p>
+        <span class="alert-absolute"> ini absoulute </span>
+      </div>
+    </div>
+    <div class="container">
+      <h1>Position Absolute</h1>
+      <div class="card-box">
+        <h5>Ini adalah Card</h5>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+          cum?
+        </p>
+        <span class="alert-absolute"> ini absoulute </span>
+      </div>
     </div>
 
     <div class="area-fixed">
-        <p>Gabisa discroll</p>
+      <a href="http://wa.me/6285157721801/?text=hallo ka fahmi, saya mau belajar." target="_blank">
+        <i class="fa fa-phone fa-lg text-white"></i>
+      </a>
     </div>
-
-
-
   </body>
 </html>
