--- a/css/position.html
+++ b/css/position.html
@@ -7,24 +7,17 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css"
-      integrity="sha512-mXqwRsOznG7CS37KA7CLR1Fc72gfOgp7r8xaVdBKoBKhitcKI/mK+IamtZUf+FAkufXOvVTESu9lPsoQc+kFxg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/fontawesome.min.css"
-      integrity="sha512-J2Gce+WmOttffHOrVKLTlzxIalPXUMDbSfn5ADqp8Vj9EngnjNHr+jjiL3ZB8muEzo+K51gU10X+0eGqGNL7QA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@@ -84,17 +77,26 @@
         bottom: 20px;
         right: 20px;
       }
-
       .text-white {
         color: #ffff;
+      }
+      .sticky {
+        position: sticky;
+        top: 0;
+        background: #0088cc;
+        z-index: 1;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>CSS Layout Position</h1>
+      <h1 style="float: right">CSS Layout Position</h1>
       <p>Jenis jenis position pada css</p>
       <p>Ini termasuk display static (bawaan)</p>
+    </div>
+    <div class="container sticky">
+      <h1>Ini sticky</h1>
+      <p>akan diam di posisi tertentu</p>
     </div>
 
     <div class="container">
@@ -125,7 +127,12 @@
         <span class="alert-absolute"> ini absoulute </span>
       </div>
     </div>
-    <div class="container">
+    <div
+      class="container"
+      data-aos="flip-left"
+      data-aos-easing="ease-out-cubic"
+      data-aos-duration="2000"
+    >
       <h1>Position Absolute</h1>
       <div class="card-box">
         <h5>Ini adalah Card</h5>
@@ -138,9 +145,17 @@
     </div>
 
     <div class="area-fixed">
-      <a href="http://wa.me/6285157721801/?text=hallo ka fahmi, saya mau belajar." target="_blank">
+      <a
+        href="http://wa.me/6285157721801/?text=hallo ka fahmi, saya mau belajar."
+        target="_blank"
+      >
         <i class="fa fa-phone fa-lg text-white"></i>
       </a>
     </div>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
