--- a/css/index.html
+++ b/css/index.html
@@ -78,6 +78,21 @@
         margin: 10px;
         visibility: hidden;
       }
+      .d-flex{
+        width: 100%;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+      .card-flex{
+        width: 20%;
+        height: 50px;
+        margin: 10px;
+        padding: 10px;
+        background-color: #0088cc60;
+      }
     </style>
   </head>
   <body>
@@ -186,5 +201,14 @@
         </p>
       </div>
     </div>
+
+    <div class="container">
+      <div class="d-flex">
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+      </div>
+    </div>
+
   </body>
 </html>
