--- a/css/index.html
+++ b/css/index.html
@@ -80,15 +80,16 @@
       }
       .d-flex{
         width: 100%;
-        height: 400px;
+        min-height: 100px;
         display: flex;
-        flex-direction: column;
         justify-content: space-evenly;
-        align-items: center;
+        flex-wrap: wrap;
+        background-color: #ff000060;
       }
       .card-flex{
-        width: 20%;
+        width: 200px;
         height: 50px;
+        flex: 1 1 200px;
         margin: 10px;
         padding: 10px;
         background-color: #0088cc60;
@@ -204,6 +205,18 @@
 
     <div class="container">
       <div class="d-flex">
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
+        <div class="card-flex">Ini adalah kartu</div>
         <div class="card-flex">Ini adalah kartu</div>
         <div class="card-flex">Ini adalah kartu</div>
         <div class="card-flex">Ini adalah kartu</div>
