--- a/javascript/index.html
+++ b/javascript/index.html
@@ -10,6 +10,9 @@
     <button type="button" onclick="return confirm('Udah makan?')">Klik saya</button>
     <button type="button" onclick="return show()">Klik saya</button>
     <button type="button" onclick="return hello()">Klik saya</button>
+    <button type="button" onclick="return klik()">Function klik</button>
+    <button type="button" onclick="return sapa('malam', 'kak yola')">Sapa</button>
+    <button type="button" onclick="return jalankanKalkulator()">Kalkulator saya</button>
 
 
     <script>
