--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet" />
         <!-- bootstrap Icon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <style>
@@ -45,6 +45,11 @@
                             <a class="nav-link" href="#">Contact Us</a>
                         </li>
                     </ul>
+                </div>
+                <div class="d-flex justify-content-center align-items-center me-4">
+                    <a href="#" class="text-dark mx-2"><i class="bi bi-cart"></i></a>
+                    <a href="#" class="text-dark mx-2"><i class="bi bi-bag-heart"></i></a>
+                    <a href="#" class="text-dark mx-2"><i class="bi bi-card-list"></i></a>
                 </div>
             </div>
         </nav>
