--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -54,6 +54,15 @@
             </div>
         </nav>
     </section>
+    <section id="hero">
+        <div class="row g-3 my-4">
+            <div class="col-lg-5">
+                <div class="card card-tall h-100 overflow-hidden">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
