--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -58,9 +58,27 @@
         <div class="row g-3 my-4">
             <div class="col-lg-5">
                 <div class="card card-tall h-100 overflow-hidden">
-                    
+                    <img src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp" alt="" class="card-img">
+                    <div class="card-img-overlay d-flex flex-column justify-content-end">
+                        <div class="">
+                            <h5 class="card-title">Adinda Samba</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, nisi.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="col-lg-3">
+                <div class="card card-tall h-100 overflow-hidden">
+                    <img src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp" alt="" class="card-img">
+                    <div class="card-img-overlay d-flex flex-column justify-content-end">
+                        <div class="">
+                            <h5 class="card-title">Adinda Samba</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, nisi.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </section>
 
