--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -54,11 +54,11 @@
             </div>
         </nav>
     </section>
-    <section id="hero">
+    <section class="mx-5" id="hero">
         <div class="row g-3 my-4">
             <div class="col-lg-5">
                 <div class="card card-tall h-100 overflow-hidden">
-                    <img src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp" alt="" class="card-img">
+                    <img src="https://i.ytimg.com/vi/bwuuHSSQy5M/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLC05cU92p6wJpBWUoDabUgddgu23w" alt="" class="card-img">
                     <div class="card-img-overlay d-flex flex-column justify-content-end">
                         <div class="">
                             <h5 class="card-title">Adinda Samba</h5>
@@ -68,8 +68,28 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <div class="card card-tall h-100 overflow-hidden">
+                <div class="card">
                     <img src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp" alt="" class="card-img">
+                    <div class="card-img-overlay d-flex flex-column justify-content-end">
+                        <div class="">
+                            <h5 class="card-title">Adinda Samba</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, nisi.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mt-3">
+                    <img src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp" alt="" class="card-img">
+                    <div class="card-img-overlay d-flex flex-column justify-content-end">
+                        <div class="">
+                            <h5 class="card-title">Adinda Samba</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, nisi.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card card-tall h-100 overflow-hidden">
+                    <img src="https://i.ytimg.com/vi/bwuuHSSQy5M/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLC05cU92p6wJpBWUoDabUgddgu23w" alt="" class="card-img">
                     <div class="card-img-overlay d-flex flex-column justify-content-end">
                         <div class="">
                             <h5 class="card-title">Adinda Samba</h5>
