--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -58,7 +58,7 @@
         <div class="row g-3 my-4">
             <div class="col-lg-5">
                 <div class="card card-tall h-100 overflow-hidden">
-                    <img src="https://i.ytimg.com/vi/bwuuHSSQy5M/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLC05cU92p6wJpBWUoDabUgddgu23w" alt="" class="card-img">
+                    <img src="https://image.idntimes.com/post/20250516/desain-bebas-56-6220555b6323d2e7ce1f33a7ed3e8989.jpg" alt="" class="card-img">
                     <div class="card-img-overlay d-flex flex-column justify-content-end">
                         <div class="">
                             <h5 class="card-title">Adinda Samba</h5>
@@ -89,7 +89,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="card card-tall h-100 overflow-hidden">
-                    <img src="https://i.ytimg.com/vi/bwuuHSSQy5M/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLC05cU92p6wJpBWUoDabUgddgu23w" alt="" class="card-img">
+                    <img src="https://bobobobo.com/cdn/shop/articles/Artikel-Adidas-Desktop.webp?crop=center&height=1200&v=1683687165&width=1200" alt="" class="card-img">
                     <div class="card-img-overlay d-flex flex-column justify-content-end">
                         <div class="">
                             <h5 class="card-title">Adinda Samba</h5>
