--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -24,7 +24,7 @@
 <body>
     <section id="navbar">
         <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid mx-4 px-4">
                 <a class="navbar-brand text-success" href="#">Tokopaedi</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="d-flex justify-content-center align-items-center me-4">
+                <div class="d-flex justify-content-center align-items-center">
                     <a href="#" class="text-dark mx-2"><i class="bi bi-cart"></i></a>
                     <a href="#" class="text-dark mx-2"><i class="bi bi-bag-heart"></i></a>
                     <a href="#" class="text-dark mx-2"><i class="bi bi-card-list"></i></a>
@@ -98,7 +98,22 @@
                     </div>
                 </div>
             </div>
-            
+        </div>
+    </section>
+    <section class="mt-4" id="about">
+        <div class="container-fluid px-5 my-5">
+            <h1>About <span class="text-success">Tokopaedi</span></h1>
+            <div class="row mt-4">
+                <div class="col-lg-6">
+                    <p class="text-muted">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore autem fugit, nostrum saepe ullam debitis dolores animi nesciunt tempore exercitationem.
+                    </p>
+                    <div class="text-muted">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique ut totam odio alias ea distinctio dignissimos numquam placeat optio rem. Placeat deserunt voluptatem molestias velit dolorem tempore, possimus aperiam saepe unde! Officia earum dolorem ipsa vero, sint, possimus ex tempore exercitationem explicabo non, voluptates deserunt.
+                    </div>
+                </div>
+                <div class="col-lg-6"></div>
+            </div>
         </div>
     </section>
 
