--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -1,123 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Toko Saya</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet" />
-        <!-- bootstrap Icon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+      href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- bootstrap Icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
-        * {
-            font-family: "poppins", sans-serif;
-        }
+      * {
+        font-family: "poppins", sans-serif;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <section id="navbar">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid mx-4 px-4">
-                <a class="navbar-brand text-success" href="#">Tokopaedi</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="d-flex justify-content-center align-items-center">
-                    <a href="#" class="text-dark mx-2"><i class="bi bi-cart"></i></a>
-                    <a href="#" class="text-dark mx-2"><i class="bi bi-bag-heart"></i></a>
-                    <a href="#" class="text-dark mx-2"><i class="bi bi-card-list"></i></a>
-                </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid mx-4 px-4">
+          <a class="navbar-brand text-success" href="#">Tokopaedi</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
+            <a href="#" class="text-dark mx-2"><i class="bi bi-cart"></i></a>
+            <a href="#" class="text-dark mx-2"
+              ><i class="bi bi-bag-heart"></i
+            ></a>
+            <a href="#" class="text-dark mx-2"
+              ><i class="bi bi-card-list"></i
+            ></a>
+          </div>
+        </div>
+      </nav>
     </section>
     <section class="mx-5" id="hero">
-        <div class="row g-3 my-4">
-            <div class="col-lg-5">
-                <div class="card card-tall h-100 overflow-hidden">
-                    <img src="https://image.idntimes.com/post/20250516/desain-bebas-56-6220555b6323d2e7ce1f33a7ed3e8989.jpg" alt="" class="card-img">
-                    <div class="card-img-overlay d-flex flex-column justify-content-end">
-                        <div class="">
-                            <h5 class="card-title">Adinda Samba</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, nisi.</p>
-                        </div>
-                    </div>
-                </div>
+      <div class="row g-3 my-4">
+        <div class="col-lg-5">
+          <div class="card card-tall h-100 overflow-hidden">
+            <img
+              src="https://image.idntimes.com/post/20250516/desain-bebas-56-6220555b6323d2e7ce1f33a7ed3e8989.jpg"
+              alt=""
+              class="card-img"
+            />
+            <div
+              class="card-img-overlay d-flex flex-column justify-content-end"
+            >
+              <div class="">
+                <h5 class="card-title">Adinda Samba</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Necessitatibus, nisi.
+                </p>
+              </div>
             </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp" alt="" class="card-img">
-                    <div class="card-img-overlay d-flex flex-column justify-content-end">
-                        <div class="">
-                            <h5 class="card-title">Adinda Samba</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, nisi.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card mt-3">
-                    <img src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp" alt="" class="card-img">
-                    <div class="card-img-overlay d-flex flex-column justify-content-end">
-                        <div class="">
-                            <h5 class="card-title">Adinda Samba</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, nisi.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card card-tall h-100 overflow-hidden">
-                    <img src="https://bobobobo.com/cdn/shop/articles/Artikel-Adidas-Desktop.webp?crop=center&height=1200&v=1683687165&width=1200" alt="" class="card-img">
-                    <div class="card-img-overlay d-flex flex-column justify-content-end">
-                        <div class="">
-                            <h5 class="card-title">Adinda Samba</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, nisi.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="col-lg-3">
+          <div class="card">
+            <img
+              src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp"
+              alt=""
+              class="card-img"
+            />
+            <div
+              class="card-img-overlay d-flex flex-column justify-content-end"
+            >
+              <div class="">
+                <h5 class="card-title">Adinda Samba</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Necessitatibus, nisi.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card mt-3">
+            <img
+              src="https://shoesandcare.com/storage/gambar_post/fileName1718334284.webp"
+              alt=""
+              class="card-img"
+            />
+            <div
+              class="card-img-overlay d-flex flex-column justify-content-end"
+            >
+              <div class="">
+                <h5 class="card-title">Adinda Samba</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Necessitatibus, nisi.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card card-tall h-100 overflow-hidden">
+            <img
+              src="https://bobobobo.com/cdn/shop/articles/Artikel-Adidas-Desktop.webp?crop=center&height=1200&v=1683687165&width=1200"
+              alt=""
+              class="card-img"
+            />
+            <div
+              class="card-img-overlay d-flex flex-column justify-content-end"
+            >
+              <div class="">
+                <h5 class="card-title">Adinda Samba</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Necessitatibus, nisi.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="mt-4" id="about">
-        <div class="container-fluid px-5 my-5">
-            <h1>About <span class="text-success">Tokopaedi</span></h1>
-            <div class="row mt-4">
-                <div class="col-lg-6">
-                    <p class="text-muted">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore autem fugit, nostrum saepe ullam debitis dolores animi nesciunt tempore exercitationem.
-                    </p>
-                    <div class="text-muted">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique ut totam odio alias ea distinctio dignissimos numquam placeat optio rem. Placeat deserunt voluptatem molestias velit dolorem tempore, possimus aperiam saepe unde! Officia earum dolorem ipsa vero, sint, possimus ex tempore exercitationem explicabo non, voluptates deserunt.
-                    </div>
-                </div>
-                <div class="col-lg-6"></div>
+      <div class="container-fluid px-5 my-5">
+        <h1 class="ms-4">About <span class="text-success">Tokopaedi</span></h1>
+        <div class="row mt-4">
+          <div class="col-lg-6 px-5">
+            <p class="text-muted" style="text-align: justify">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Inventore autem fugit, nostrum saepe ullam debitis dolores animi
+              nesciunt tempore exercitationem.
+            </p>
+            <div class="text-muted" style="text-align: justify">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Similique ut totam odio alias ea distinctio dignissimos numquam
+              placeat optio rem. Placeat deserunt voluptatem molestias velit
+              dolorem tempore, possimus aperiam saepe unde! Officia earum
+              dolorem ipsa vero, sint, possimus ex tempore exercitationem
+              explicabo non, voluptates deserunt.
             </div>
+          </div>
+          <div class="col-lg-6 px-5">
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="card p-4 bg-success bg-opacity-50">
+                  <div class="card-title">Original</div>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Officia, rem!
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="card p-4 bg-info bg-opacity-50">
+                  <div class="card-title">Cheapest</div>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Officia, rem!
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="card p-4 bg-warning bg-opacity-50">
+                  <div class="card-title">Fast Delivery</div>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Officia, rem!
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
+  </body>
 </html>
