--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -193,7 +193,7 @@
       </div>
     </section>
 
-    <section class="mx-5 bg-secondary bg-opacity-25" id="product" style="min-height: 20dvw;">
+    <section class="mx-5 bg-secondary bg-opacity-25 mb-5" id="product" style="min-height: 20dvw;">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3 my-4">
