--- a/javascript/landing-page.html
+++ b/javascript/landing-page.html
@@ -195,7 +195,7 @@
 
     <section class="mx-5 bg-secondary bg-opacity-25 mb-5" id="product" style="min-height: 20dvw;">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row" id="rowData">
                 <div class="col-md-3 my-4">
                     <div class="card p-4">
                         <img src="https://bobobobo.com/cdn/shop/articles/Artikel-Adidas-Desktop.webp?crop=center&height=1200&v=1683687165&width=1200" class="w-full" alt="">
@@ -209,6 +209,38 @@
             </div>
         </div>
     </section>
+
+    <script>
+        const rowData = document.getElementById('rowData');
+
+        async function showData() {
+            try {
+
+                const api ="https://689db028ce755fe697898a5f.mockapi.io/product";
+                const response = await fetch(api);
+
+                // kondisi jika data gagal dipanggil
+                if(!response.ok){
+                    console.log("error");
+                    throw new Error(`Bermasalah : ${response.status}` )
+                }
+
+                const dataProduct = await response.json();
+
+                dataProduct.forEach((item) => {
+                    console.log(item)
+                })
+
+
+            } catch{
+
+            }
+        }
+
+        showData()
+
+
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
